--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-*.py[cod]
-
-# C extensions
-*.so
-
+*.py[co]
+.idea
 # Packages
 *.egg
 *.egg-info
@@ -15,8 +12,6 @@ var
 sdist
 develop-eggs
 .installed.cfg
-lib
-lib64
 
 # Installer logs
 pip-log.txt
@@ -24,12 +19,26 @@ pip-log.txt
 # Unit test / coverage reports
 .coverage
 .tox
-nosetests.xml
-
-# Translations
+data/auth
+data/beaker
+#Translations
 *.mo
 
-# Mr Developer
+#Mr Developer
 .mr.developer.cfg
-.project
-.pydevproject
+
+.DS_store
+test.db
+log.txt
+.log
+*.log
+
+#sphinx stuff
+doc/_build
+
+.noseids
+
+*.cache
+
+*.lock
+
